# C-CPP

./: README.md
HY1CD-src/: HDF_STRUCT.h  hy1_czi_l2_pro.cpp  hy1_czi_l2_pro.hpp  hy1_czi_l2b.cpp  hy1_czi_l2b.hpp  hy1_czi_l2c.cpp  hy1_czi_l2c.hpp  main.cpp
HY1CD-src/AtmosphericCorrection/: Atmospheric_Correction.cpp  Atmospheric_Correction.h  Linear_Interpolation.cpp  Linear_Interpolation.h  TableSearch.cpp  TableSearch.h  read_Aerosol_and_scattering.cpp  read_Aerosol_and_scattering.h  read_txt.cpp  read_txt.h
HY1CD-src/BasicOperation/: Basic_Operation.c  Basic_Operation.h  ReadWriteH5Char.cpp  ReadWriteH5Char.hpp  Read_Data_Attr_Xml.c  Read_Data_Attr_Xml.h  SaveJPEG.cpp  SaveJPEG.hpp  Write_Data_Attr_Xml.cpp  Write_Data_Attr_Xml.hpp  rendering.cpp  rendering.hpp
HY1CD-src/CloudDetect/: CLOUD_and_SHADOW.cpp  CLOUD_and_SHADOW.h  Cloud_detect.cpp  Cloud_detect.h  DATA_MASK.cpp  DATA_MASK.h  HDF_write_to_IPLImage.cpp  HDF_write_to_IPLImage.h  HSV_to_RGB.cpp  HSV_to_RGB.h  RGB_to_HSV.cpp  RGB_to_HSV.h
HY1CD-src/LandMask/: Land_Mask.cpp  Land_Mask.h  NDWI.cpp  NDWI.h  img_binary.cpp  img_binary.h  img_cor_exp.cpp  img_cor_exp.h  img_filt.cpp  img_filt.h  img_padding.cpp  img_padding.h
SortSearch/BinarySearch/: BinarySearch.cpp  BinarySearch.sln  BinarySearch.vcxproj
SortSearch/BinarySearch/Debug/: BinarySearch.ilk  vc142.idb
SortSearch/BinarySearch/Debug/BinarySearch.tlog/: BinarySearch.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SortSearch/Permutations/: Permutations.cpp  Permutations.sln  Permutations.vcxproj  Permutations.vcxproj.filters
SortSearch/Permutations/Debug/: Permutations.ilk  vc142.idb
SortSearch/Permutations/Debug/Permutations.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Permutations.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SortSearch/QuickSort/: QuickSort.cpp  QuickSort.sln  QuickSort.vcxproj
SortSearch/QuickSort/Debug/: QuickSort.ilk  vc142.idb
SortSearch/QuickSort/Debug/QuickSort.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  QuickSort.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SortSearch/SequentialSearch/: SequentialSearch.cpp  SequentialSearch.sln  SequentialSearch.vcxproj  SequentialSearch.vcxproj.filters
SortSearch/SequentialSearch/Debug/: SequentialSearch.ilk  vc142.idb
SortSearch/SequentialSearch/Debug/SequentialSearch.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SequentialSearch.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
detect_human/: CMakeLists.txt  start.sh
detect_human/include/: toolfuncs.h
detect_human/src/2019年11月7日早上/: CMakeLists.txt  config.cfg  start.sh
detect_human/src/2019年11月7日早上/include/: Hungarian.h  Track.h  b64.h  base64.h  loadargs.h  redis.h  toolfuncs.h  vigenere.h
detect_human/src/2019年11月7日早上/src/: Hungarian.cpp  KalmanTracker.cpp  Track.cpp  b64.cpp  improcess.cpp  loadargs.cpp  main.cpp  toolfuncs.cpp  vigenere.cpp
detect_human/src/2019年12月3日/: CMakeLists.txt  DetectHuman.cpp  main.cpp  toolfuncs.cpp
opencv-cmake/: CMakeCache.txt  CMakeLists-error.txt  CMakeLists.txt  Makefile  Test  Test.c  Test.cpp  cmake_install.cmake
